# MinecraftBot

./: .gitignore  CMakeLists.txt  README.md
include/: ChatListener.h  ResourcePackHandler.h
src/: ChatListener.cpp  ResourcePackHandler.cpp  main.cpp
